# dl

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
sentiment/: README.md  __init__.py  fine_tune.ipynb  generate_embeddings.ipynb  generate_embeddings_old.ipynb  select_embeddings.ipynb  sentiment_classifier.py  train_reward_function.ipynb
sentiment/output/: pleasure_to_watch.txt  touching_and_truly_touching.txt
util/: __init__.py  download_gdrive.py  mlp_regressor.py  train.py
