[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'dl'
version = '0.1.0'

[tool.setuptools.packages.find]
include = ['util*', 'sentiment*']

[tool.black]
line-length = 100
skip-string-normalization = true
string-normalization = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
